[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coindcx"
version = "0.1.1"
description = "CoinDCX exchange plugin for bt_api framework - Indian cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "coindcx",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "india"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_coindcx"
Documentation = "https://bt-api-coindcx.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_coindcx"
Issues = "https://github.com/cloudQuant/bt_api_coindcx/issues"
Changelog = "https://github.com/cloudQuant/bt_api_coindcx/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coindcx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "TC",
    "RUF",
]
ignore = [
    "E501",
    "TC002",
]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_coindcx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
